Redo title page.

--- a/MastodonManual.tex
+++ b/MastodonManual.tex
@@ -108,10 +108,10 @@
 \newpage
 \tableofcontents
 
-\newpage
-\part{Using Mastodon.}
+% \newpage
+% \part{Using Mastodon.}
 
-% % Automated tracking.
+% % % Automated tracking.
 % \newpage
 % \input{src/Chapter_A1.tex}
 
@@ -123,63 +123,63 @@
 % \newpage
 % \input{src/Chapter_A3.tex}
 
-% % Feature, tags and tables.
-\newpage
-\input{src/Chapter_A4.tex}
+% % % Feature, tags and tables.
+% \newpage
+% \input{src/Chapter_A4.tex}
 
-% Semi automated-tracking.
-\newpage
-\input{src/Chapter_A5.tex}
-
-
-
-
-
-\newpage
-\part{Mastodon interoperability.}
-\vfill
-
-
-\newpage
-\part{Extending Mastodon.}
-\vfill
+% % Semi automated-tracking.
+% \newpage
+% \input{src/Chapter_A5.tex}
 
 
 
 
-\newpage
-\part{Technical information.}
-\vfill
-\epigraph{
-\textit{Frères humains qui après nous vivez \\ 
-N'ayez les cœurs contre nous endurcis, \\
-Car, se pitié de nous pauvres avez, \\ 
-Dieu en aura plus tost de vous merciz.}
-}{Francois Villon}
 
-% Tecnical description of features.
-\newpage
-\input{src/Chapter_D1.tex}
+% \newpage
+% \part{Mastodon interoperability.}
+% \vfill
 
-% The feature update mechanism.
-\newpage
-\input{src/Chapter_D2.tex}
 
-% The graph of Mastodon.
-\newpage
-\input{src/Chapter_D3.tex}
-
-% KD-tree searched on Convex polytopes.
-\newpage
-\input{src/Chapter_D4.tex}
+% \newpage
+% \part{Extending Mastodon.}
+% \vfill
 
 
 
 
-\newpage
-\bibliographystyle{ieeetr}
-\clearpage 
-\bibliography{References}
+% \newpage
+% \part{Technical information.}
+% \vfill
+% \epigraph{
+% \textit{Frères humains qui après nous vivez \\ 
+% N'ayez les cœurs contre nous endurcis, \\
+% Car, se pitié de nous pauvres avez, \\ 
+% Dieu en aura plus tost de vous merciz.}
+% }{Francois Villon}
+
+% % Tecnical description of features.
+% \newpage
+% \input{src/Chapter_D1.tex}
+
+% % The feature update mechanism.
+% \newpage
+% \input{src/Chapter_D2.tex}
+
+% % The graph of Mastodon.
+% \newpage
+% \input{src/Chapter_D3.tex}
+
+% % KD-tree searched on Convex polytopes.
+% \newpage
+% \input{src/Chapter_D4.tex}
+
+
+
+
+% \newpage
+% \bibliographystyle{ieeetr}
+% \clearpage 
+% \bibliography{References}
 
 
 
