Added a layman preamble to the chapter on convex polytope.

--- a/MastodonManual.tex
+++ b/MastodonManual.tex
@@ -1,4 +1,4 @@
-\documentclass{scrartcl}
+\documentclass[numbers=endperiod]{scrartcl}
 
 % Tickz.
 \usepackage{tikz}
@@ -92,7 +92,6 @@
 % Smaller margins. Paper is expensive and we write in big characters.
 \usepackage[margin=1in]{geometry}
 
-
 %---------------------------------------------------------------------------------
 % Contents
 %---------------------------------------------------------------------------------
@@ -170,16 +169,16 @@
 % \input{src/Chapter_D3.tex}
 
 % % KD-tree searched on Convex polytopes.
-% \newpage
-% \input{src/Chapter_D4.tex}
+\newpage
+\input{src/Chapter_D4.tex}
 
 
 
 
-% \newpage
-% \bibliographystyle{ieeetr}
-% \clearpage 
-% \bibliography{References}
+\newpage
+\bibliographystyle{ieeetr}
+\clearpage 
+\bibliography{References}
 
 
 
