Spot feature description.

--- a/MastodonManual.tex
+++ b/MastodonManual.tex
@@ -156,9 +156,9 @@
 % Dieu en aura plus tost de vous merciz.}
 % }{Francois Villon}
 
-% % Tecnical description of features.
-% \newpage
-% \input{src/Chapter_D1.tex}
+% Tecnical description of features.
+\newpage
+\input{src/Chapter_D1.tex}
 
 % % The feature update mechanism.
 % \newpage
@@ -169,8 +169,8 @@
 % \input{src/Chapter_D3.tex}
 
 % % KD-tree searched on Convex polytopes.
-\newpage
-\input{src/Chapter_D4.tex}
+% \newpage
+% \input{src/Chapter_D4.tex}
 
 
 
