Change minted for listings to be able to compile with tectonic.

--- a/MastodonManual.tex
+++ b/MastodonManual.tex
@@ -83,8 +83,35 @@
 \setlength\parindent{24pt}
 
 % Syntax highlighting
-\usepackage{minted}
-\setminted{fontsize=\small, baselinestretch=1}
+\usepackage{listings}
+\usepackage{lstautogobble}  % Fix relative indenting
+\usepackage{color}          % Code coloring
+\usepackage{zi4}            % Nice font
+\definecolor{bluekeywords}{rgb}{0.13, 0.13, 1}
+\definecolor{greencomments}{rgb}{0, 0.5, 0}
+\definecolor{redstrings}{rgb}{0.9, 0, 0}
+\definecolor{graynumbers}{rgb}{0.5, 0.5, 0.5}
+\lstset{
+    autogobble,
+    columns=fullflexible,
+    showspaces=false,
+    showtabs=false,
+    breaklines=true,
+    showstringspaces=false,
+    breakatwhitespace=true,
+    escapeinside={(*@}{@*)},
+    commentstyle=\color{greencomments},
+    keywordstyle=\color{bluekeywords},
+    stringstyle=\color{redstrings},
+    numberstyle=\color{graynumbers},
+    basicstyle=\ttfamily\footnotesize,
+    frame=l,
+    framesep=12pt,
+    xleftmargin=12pt,
+    tabsize=4,
+    captionpos=b
+}
+
 
 % Figure caption with special fonts.
 \usepackage[font=small,labelfont=bf,format=plain]{caption}
@@ -107,70 +134,70 @@
 \newpage
 \tableofcontents
 
-% \newpage
-% \part{Using Mastodon.}
+\newpage
+\part{Using Mastodon.}
 
-% % % Automated tracking.
-% \newpage
-% \input{src/Chapter_A1.tex}
+% % Automated tracking.
+\newpage
+\input{src/Chapter_A1.tex}
 
-% % Manual tracking. TrackScheme.
-% \newpage
-% \input{src/Chapter_A2.tex}
+% Manual tracking. TrackScheme.
+\newpage
+\input{src/Chapter_A2.tex}
 
-% % Orienting in Mastodon.
-% \newpage
-% \input{src/Chapter_A3.tex}
+% Orienting in Mastodon.
+\newpage
+\input{src/Chapter_A3.tex}
 
-% % % Feature, tags and tables.
-% \newpage
-% \input{src/Chapter_A4.tex}
+% % Feature, tags and tables.
+\newpage
+\input{src/Chapter_A4.tex}
 
-% % Semi automated-tracking.
-% \newpage
-% \input{src/Chapter_A5.tex}
-
-
-
-
-
-% \newpage
-% \part{Mastodon interoperability.}
-% \vfill
-
-
-% \newpage
-% \part{Extending Mastodon.}
-% \vfill
+% Semi automated-tracking.
+\newpage
+\input{src/Chapter_A5.tex}
 
 
 
 
-% \newpage
-% \part{Technical information.}
-% \vfill
-% \epigraph{
-% \textit{Frères humains qui après nous vivez \\ 
-% N'ayez les cœurs contre nous endurcis, \\
-% Car, se pitié de nous pauvres avez, \\ 
-% Dieu en aura plus tost de vous merciz.}
-% }{Francois Villon}
+
+\newpage
+\part{Mastodon interoperability.}
+\vfill
+
+
+\newpage
+\part{Extending Mastodon.}
+\vfill
+
+
+
+
+\newpage
+\part{Technical information.}
+\vfill
+\epigraph{
+\textit{Frères humains qui après nous vivez \\ 
+N'ayez les cœurs contre nous endurcis, \\
+Car, se pitié de nous pauvres avez, \\ 
+Dieu en aura plus tost de vous merciz.}
+}{Francois Villon}
 
 % Tecnical description of features.
 \newpage
 \input{src/Chapter_D1.tex}
 
-% % The feature update mechanism.
-% \newpage
-% \input{src/Chapter_D2.tex}
+% The feature update mechanism.
+\newpage
+\input{src/Chapter_D2.tex}
 
-% % The graph of Mastodon.
-% \newpage
-% \input{src/Chapter_D3.tex}
+% The graph of Mastodon.
+\newpage
+\input{src/Chapter_D3.tex}
 
-% % KD-tree searched on Convex polytopes.
-% \newpage
-% \input{src/Chapter_D4.tex}
+% KD-tree searched on Convex polytopes.
+\newpage
+\input{src/Chapter_D4.tex}
 
 
 
