--- a/src/Chapter_D1.tex
+++ b/src/Chapter_D1.tex
@@ -3,6 +3,9 @@
 
 We describe here how the feature values currently available in Mastodon are calculated. 
 
+\subsection{Feature dimensions.}
+
+
 \subsection{Spot features.}
 
 \subsubsection{Spot gaussian-filtered intensity.}
