Minor tweak of the feature section.

--- a/src/Chapter_D1.tex
+++ b/src/Chapter_D1.tex
@@ -13,7 +13,7 @@ Mastodon only has physical units for space.
 For time, the frame interval is always equal to the dummy \texttt{1~frame}.
 This is why you will find all units involving time expressed in \texttt{frame}s.
 Each feature projection has a dimension, and the features report what are the dimension of their projections in the feature computation dialog (Figure~\ref{fig:FindFeatureDimension}).
-Here is the table of all the feature dimensions currently supported in Mastodon, and example of the derived units when the spatial units are~µm.
+The Table~\ref{tab:FeatureDimensions} lists all the feature dimensions currently supported in Mastodon, and give examples of the derived units when the spatial units are~µm.
 
 \begin{figure}
     \centering
