--- a/src/TableSpotFeatures.tex
+++ b/src/TableSpotFeatures.tex
@@ -36,7 +36,7 @@
     \multicolumn{2}{l|}{Spot track ID} &
     The ID of the track the spot belongs to.
     Track IDs are positive integer numbers starting from 0.
-    \\ \midrule
+    \\ \bottomrule
 
 \end{tabular}
 }
