--- a/src/Chapter_A2.tex
+++ b/src/Chapter_A2.tex
@@ -1,5 +1,5 @@
 \section{Manually editing tracks in Mastodon. TrackScheme.}
-\label{Manuel_Editing}
+\label{sec:ManuelEditing}
 
 One of the key feature of Mastodon, the implementation of which made our lives extremely hard and rich, is the ability to edit manually at any time any spot or link within an annotation that can contains billions of them, while retaining a good and pleasant response time from the software.
 I am not even speaking of the undo/redo mechanism, which getting right was also very interesting. 
@@ -311,7 +311,7 @@ This way you can create links between spots separated by more than one time-poin
 
 
 \subsection{The selection.}
-\label{Selection_tool}
+\label{sec:SelectionTool}
 
 The selection is the third visual cue of Mastodon and probably the most important one. 
 It behaves and has the role of a classical selection tool you would find in another software that manages a collection of data items. 
