--- a/src/Chapter_D1.tex
+++ b/src/Chapter_D1.tex
@@ -1,5 +1,5 @@
 \section{Mastodon numerical features.}
-\label{FeaturesExplanation}
+\label{sec:FeaturesExplanation}
 
 This chapter describes how the feature values currently available in Mastodon are calculated. 
 We also gives information about their dimension, units, \etc.
