--- a/src/Chapter_D2.tex
+++ b/src/Chapter_D2.tex
@@ -1,5 +1,5 @@
 \section{The feature computation update mechanism.}
-\label{FeatureComputationUpdateMechanism}
+\label{sec:FeatureComputationUpdateMechanism}
 
 In this chapter we explain one of the important aspect of feature computation in Mastodon, in the case of large data.
 As we repeated several times in this manual, Mastodon is meant to harness large images and large data generated from it. 
