--- a/src/TableFeatureDimensions.tex
+++ b/src/TableFeatureDimensions.tex
@@ -79,7 +79,7 @@
     ø &
     This dimension is used by spot detectors.
     There is a special feature called \textbf{Detection quality}, that stores for each spot they detect automatically a measure of quality or confidence in their detection.
-    See section~\ref{Detection_Cells_DoG_Detector}.
+    See section~\ref{sec:DetectionCellsDoGDetector}.
     \\ \midrule
     
     \texttt{COST} &
