--- a/MastodonManual.tex
+++ b/MastodonManual.tex
@@ -137,25 +137,29 @@
 \newpage
 \part{Using Mastodon.}
 
-% % % Automated tracking.
-% \newpage
-% \input{src/Chapter_A1.tex}
+% % Automated tracking.
+\newpage
+\input{src/Chapter_A1.tex}
 
-% % Manual tracking. TrackScheme.
-% \newpage
-% \input{src/Chapter_A2.tex}
+% Manual tracking. TrackScheme.
+\newpage
+\input{src/Chapter_A2.tex}
 
-% % Orienting in Mastodon.
-% \newpage
-% \input{src/Chapter_A3.tex}
+% Orienting in Mastodon.
+\newpage
+\input{src/Chapter_A3.tex}
 
-% % % Feature, tags and tables.
-% \newpage
-% \input{src/Chapter_A4.tex}
+% % Feature, tags and tables.
+\newpage
+\input{src/Chapter_A4.tex}
 
-% % Semi automated-tracking.
+% Semi automated-tracking.
+\newpage
+\input{src/Chapter_A5.tex}
+
+% % Selection editor.
 % \newpage
-% \input{src/Chapter_A5.tex}
+% \input{src/Chapter_A6.tex}
 
 
 
@@ -183,21 +187,21 @@ Car, se pitié de nous pauvres avez, \\
 Dieu en aura plus tost de vous merciz.}
 }{Francois Villon}
 
-% Tecnical description of features.
+% Technical description of features.
 \newpage
 \input{src/Chapter_D1.tex}
 
-% % The feature update mechanism.
-% \newpage
-% \input{src/Chapter_D2.tex}
+% The feature update mechanism.
+\newpage
+\input{src/Chapter_D2.tex}
 
-% % The graph of Mastodon.
-% \newpage
-% \input{src/Chapter_D3.tex}
+% The graph of Mastodon.
+\newpage
+\input{src/Chapter_D3.tex}
 
-% % KD-tree searched on Convex polytopes.
-% \newpage
-% \input{src/Chapter_D4.tex}
+% KD-tree searched on Convex polytopes.
+\newpage
+\input{src/Chapter_D4.tex}
 
 
 
