--- a/src/Chapter_A4.tex
+++ b/src/Chapter_A4.tex
@@ -88,6 +88,7 @@ When you are finished, press the \menu{OK} button.
 
 
 \subsubsection{Assigning tags to data items.}
+\label{sec:AssigningTags}
 
 Tags are set via the selection tool, presented above (chapter~\ref{sec:SelectionTool} page~\pageref{sec:SelectionTool}).
 Once you have some spots and links in the selection, you can assign a tag to it via the \menu{Edit > Tags > The tag set name > The tag label} menu.
