--- a/MastodonManual.tex
+++ b/MastodonManual.tex
@@ -138,28 +138,28 @@
 \part{Using Mastodon.}
 
 % % Automated tracking.
-\newpage
-\input{src/Chapter_A1.tex}
+% \newpage
+% \input{src/Chapter_A1.tex}
 
-% Manual tracking. TrackScheme.
-\newpage
-\input{src/Chapter_A2.tex}
+% % Manual tracking. TrackScheme.
+% \newpage
+% \input{src/Chapter_A2.tex}
 
-% Orienting in Mastodon.
-\newpage
-\input{src/Chapter_A3.tex}
+% % Orienting in Mastodon.
+% \newpage
+% \input{src/Chapter_A3.tex}
 
 % % Feature, tags and tables.
-\newpage
-\input{src/Chapter_A4.tex}
-
-% Semi automated-tracking.
-\newpage
-\input{src/Chapter_A5.tex}
-
-% % Selection editor.
 % \newpage
-% \input{src/Chapter_A6.tex}
+% \input{src/Chapter_A4.tex}
+
+% % Semi automated-tracking.
+% \newpage
+% \input{src/Chapter_A5.tex}
+
+% Selection editor.
+\newpage
+\input{src/Chapter_A6.tex}
 
 
 
@@ -168,11 +168,28 @@
 \newpage
 \part{Mastodon interoperability.}
 \vfill
-
+\setlength{\epigraphwidth}{0.45\textwidth}
+\epigraph{
+\textit{My mistress' eyes are nothing like the sun; \\
+Coral is far more red than her lips' red;\\
+If snow be white, why then her breasts are dun;\\
+If hairs be wires, black wires grow on her head;\\
+I have seen roses damasked, red and white,\\
+But no such roses see I in her cheeks;\\
+And in some pérfumes is there more delight\\
+Than in the breath that from my mistress reeks.\\
+I love to hear her speak, yet well I know\\
+That music hath a far more pleasing sound.\\
+I grant I never saw a goddess go;\\
+My mistress, when she walks, treads on the ground.\\
+\, And yet, by heaven, I think my love as rare\\
+\, As any she belied with false compare.}}
+{William Shakespeare}
 
 \newpage
 \part{Extending Mastodon.}
 \vfill
+
 
 
 
@@ -187,21 +204,21 @@ Car, se pitié de nous pauvres avez, \\
 Dieu en aura plus tost de vous merciz.}
 }{Francois Villon}
 
-% Technical description of features.
-\newpage
-\input{src/Chapter_D1.tex}
+% % Technical description of features.
+% \newpage
+% \input{src/Chapter_D1.tex}
 
-% The feature update mechanism.
-\newpage
-\input{src/Chapter_D2.tex}
+% % The feature update mechanism.
+% \newpage
+% \input{src/Chapter_D2.tex}
 
-% The graph of Mastodon.
-\newpage
-\input{src/Chapter_D3.tex}
+% % The graph of Mastodon.
+% \newpage
+% \input{src/Chapter_D3.tex}
 
-% KD-tree searched on Convex polytopes.
-\newpage
-\input{src/Chapter_D4.tex}
+% % KD-tree searched on Convex polytopes.
+% \newpage
+% \input{src/Chapter_D4.tex}
 
 
 
