--- a/MastodonManual.tex
+++ b/MastodonManual.tex
@@ -182,14 +182,17 @@ I love to hear her speak, yet well I know\\
 That music hath a far more pleasing sound.\\
 I grant I never saw a goddess go;\\
 My mistress, when she walks, treads on the ground.\\
-\, And yet, by heaven, I think my love as rare\\
-\, As any she belied with false compare.}}
+\quad And yet, by heaven, I think my love as rare\\
+\quad As any she belied with false compare.}}
 {William Shakespeare}
 
 \newpage
 \part{Extending Mastodon.}
 \vfill
-
+\setlength{\epigraphwidth}{0.35\textwidth}
+\epigraph{
+\textit{As palavras, senhor, estão por aí, no ar, qualquer as pode aprender.}
+}{José Saramago}
 
 
 
