Remove the description of the feature update mechanism.
Since we just removed it from the code...

--- a/MastodonManual.tex
+++ b/MastodonManual.tex
@@ -137,25 +137,25 @@
 \newpage
 \part{Using Mastodon.}
 
-% % Automated tracking.
-% \newpage
-% \input{src/Chapter_A1.tex}
+% Automated tracking.
+\newpage
+\input{src/Chapter_A1.tex}
 
-% % Manual tracking. TrackScheme.
-% \newpage
-% \input{src/Chapter_A2.tex}
+% Manual tracking. TrackScheme.
+\newpage
+\input{src/Chapter_A2.tex}
 
-% % Orienting in Mastodon.
-% \newpage
-% \input{src/Chapter_A3.tex}
+% Orienting in Mastodon.
+\newpage
+\input{src/Chapter_A3.tex}
 
-% % Feature, tags and tables.
-% \newpage
-% \input{src/Chapter_A4.tex}
+% Feature, tags and tables.
+\newpage
+\input{src/Chapter_A4.tex}
 
-% % Semi automated-tracking.
-% \newpage
-% \input{src/Chapter_A5.tex}
+% Semi automated-tracking.
+\newpage
+\input{src/Chapter_A5.tex}
 
 % Selection editor.
 \newpage
@@ -207,21 +207,17 @@ Car, se pitié de nous pauvres avez, \\
 Dieu en aura plus tost de vous merciz.}
 }{Francois Villon}
 
-% % Technical description of features.
-% \newpage
-% \input{src/Chapter_D1.tex}
+% Technical description of features.
+\newpage
+\input{src/Chapter_D1.tex}
 
-% % The feature update mechanism.
-% \newpage
-% \input{src/Chapter_D2.tex}
+% The graph of Mastodon.
+\newpage
+\input{src/Chapter_D2.tex}
 
-% % The graph of Mastodon.
-% \newpage
-% \input{src/Chapter_D3.tex}
-
-% % KD-tree searched on Convex polytopes.
-% \newpage
-% \input{src/Chapter_D4.tex}
+% KD-tree searched on Convex polytopes.
+\newpage
+\input{src/Chapter_D3.tex}
 
 
 
